# snowdon24

./: .gitignore  .pre-commit-config.yaml  analysis.ipynb  clean_results.py  main.py  pyproject.toml  readme.md  results.json  results_1.json  scrape.py
gralloch_2025/: analysis.ipynb  duckdb_connection_configs.ipynb  file.db  scrape.py
